kubernetes/network-policies/allow-app-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-timesheet-to-mysql
  namespace: chap4
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: timesheet
      ports:
        - protocol: TCP
          port: 3306
