kubernetes/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: chap4
spec:
  podSelector: {}
  policyTypes:
    - Ingress
