kubernetes/network-policies/deny-mysql-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-mysql-egress
  namespace: chap4
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Egress
